<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
              android:id="@+id/layout_root"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingTop="12dp"
              android:paddingBottom="16dp"
              android:paddingStart="16dp"
              android:paddingEnd="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingTop="0dp"
        android:text="@string/enter_price_prompt"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/enter_type_title"
        />

    <RadioGroup
        android:id="@+id/type_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checkedButton="@id/percent_option"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/percent_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/percent_option"/>

        <RadioButton
            android:id="@+id/price_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.66"
            android:text="@string/price_option"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/enter_direction_title"
        />

    <RadioGroup
        android:id="@+id/action_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checkedButton="@+id/change_option"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/change_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_option"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rise_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rise_option"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/fall_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fall_option"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enter_value_title"
        />

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingStart="4dp"
                  android:paddingEnd="4dp"
                  android:orientation="horizontal">
        <TextView
            android:id="@+id/alert_value_action"
            android:labelFor="@id/alert_value_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_value_change_action"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:id="@+id/alert_value_type"
            android:labelFor="@id/alert_value_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_value_percent_type"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <EditText
            android:id="@+id/alert_value_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:digits="0123456789."
            android:inputType="number"
            android:maxLines="1"
            android:textSize="16sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/enter_frequency_title"
        />

    <Spinner
        android:id="@+id/alert_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/frequencies"
        android:spinnerMode="dialog"/>

</LinearLayout></ScrollView>