<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_collapseMode="none"
                android:clipChildren="false"
                android:clipToPadding="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
                        android:textSize="48sp"/>

                    <TextView
                        android:id="@+id/percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/percent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"/>

                </LinearLayout>

                <com.github.mikephil.charting.charts.LineChart
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/chart"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="match_parent"
                    android:background="@color/colorPrimary"

                    android:layout_height="200dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/toggleHour"
                            style="@style/ColorButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/hour"/>

                        <Button
                            android:id="@+id/toggleDay"
                            style="@style/ColorButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/day"/>

                        <Button
                            android:id="@+id/toggleWeek"
                            style="@style/ColorButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/week"/>

                        <Button
                            android:id="@+id/toggleMonth"
                            style="@style/ColorButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/month"/>

                        <Button
                            android:id="@+id/toggleYear"
                            style="@style/ColorButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/year"/>

                        <Button
                            android:id="@+id/toggleAll"
                            style="@style/ColorButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/all_time"/>
                    </LinearLayout>

            </LinearLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical">

        <Button
            android:id="@+id/create_alert_top"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/create_price_alert"
            android:visibility="gone"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/alert_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/create_alert"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/create_price_alert"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>